Configure Vercel deployment - frontend only
- Updated vercel.json to build only frontend
- Fixed backend TypeScript errors
- Added comprehensive deployment documentation
- Created deployment helper scripts
- Backend will be deployed separately to Railway

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -36,6 +36,6 @@
       "@/services/*": ["src/services/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/types/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
