--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,13 +10,15 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2",
-    "lucide-react": "^0.294.0",
-    "framer-motion": "^10.16.16",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.20.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
