--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "cd apps/frontend && npm run build",
     "build:backend": "cd apps/backend && npm run build",
-    "install:all": "npm install && cd apps/frontend && npm install && cd ../backend && npm install"
+    "install:all": "npm install && cd apps/frontend && npm install && cd ../backend && npm install",
+    "generate:secrets": "node generate-secrets.js"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
