--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,6 @@
   "buildCommand": "cd apps/frontend && npm install && npm run build",
   "outputDirectory": "apps/frontend/dist",
   "framework": "vite",
-  "installCommand": "cd apps/frontend && npm install",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./apps/frontend"
+  "installCommand": "cd apps/frontend && npm install"
 }
 
