--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
-  "buildCommand": "cd apps/frontend && npm install && npm run build",
-  "outputDirectory": "apps/frontend/dist",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "npm install --prefix apps/frontend && npm run build --prefix apps/frontend",
+  "devCommand": "npm run dev --prefix apps/frontend",
+  "installCommand": "npm install --prefix apps/frontend",
   "framework": "vite",
-  "installCommand": "cd apps/frontend && npm install"
+  "outputDirectory": "apps/frontend/dist"
 }
 
