--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,6 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "apps/frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/apps/frontend/dist/$1"
-    }
-  ]
+  "buildCommand": "npm run vercel-build",
+  "outputDirectory": "apps/frontend/dist",
+  "installCommand": "echo 'Skipping root install'"
 }
 
