--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/server.js",
     "test": "jest",
     "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix"
+    "lint:fix": "eslint src --ext .ts --fix",
+    "vercel-build": "echo 'Backend not deployed to Vercel'"
   },
   "dependencies": {
     "express": "^4.18.2",
