--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "cd apps/frontend && npm run build",
     "build:backend": "cd apps/backend && npm run build",
-    "vercel-build": "cd apps/frontend && npm install && npm run build",
+    "vercel-build": "npm install --prefix apps/frontend --include=dev && npm run vercel-build --prefix apps/frontend",
     "install:all": "npm install && cd apps/frontend && npm install && cd ../backend && npm install",
     "generate:secrets": "node generate-secrets.js"
   },
