--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "cd apps/frontend && npm install && npm run build",
   "outputDirectory": "apps/frontend/dist",
-  "installCommand": "echo 'Skipping root install'"
+  "installCommand": "echo 'Installing frontend dependencies in build step'"
 }
 
